--- a/about.html
+++ b/about.html
@@ -160,7 +160,7 @@
                     </div>
                     <ul>
                         <li><i class="fa fa-check-square-o" aria-hidden="true"></i>Sucesso e consistência</li>
-                        <li><i class="fa fa-check-square-o" aria-hidden="true"></i>Mentor</li>
+                        <li><i class="fa fa-check-square-o" aria-hidden="true"></i>Autocontrole</li>
                         <li><i class="fa fa-check-square-o" aria-hidden="true"></i>Análise do mercado</li>
                     </ul>
                 </div>   
@@ -194,8 +194,8 @@
 <section class="choosing-area">
     <div class="container">
         <div class="sec-title text-center">
-            <h1><span>Porquê a  <b>FOCUS Trading</b></span></h1>
-            <p>A FOCUS Trading reúne uma equipe preparada e bem empenhada com o propósito de garantir que os seus alunos tenham o melhor material do mercado, os alunos recebem manuais para o acompanhamento das aulas.</p>
+            <h1><span>Porquê a  <b>Focus Protrading</b></span></h1>
+            <p>A Focus Protrading reúne uma equipe preparada e bem empenhada com o propósito de garantir que os seus alunos tenham o melhor material do mercado, os alunos recebem manuais para o acompanhamento das aulas.</p>
         </div>
         <div class="row">
             <!--Start single industry expertise item-->
@@ -219,7 +219,7 @@
                     </div>
                     <div class="content">
                         <h3>Forma organizada de trabalhar</h3>
-                        <p>Somos focados em criar melhores condições de aprendizado, organizando material e conteúdo necessário para o melhor bom aproveitamento dos nossos alunos.</p>
+                        <p>Somos focados em criar melhores condições de aprendizado, organizando material e conteúdo necessário para o melhor aproveitamento dos nossos alunos.</p>
                     </div>    
                 </div>
             </div>
@@ -234,7 +234,7 @@
                     </div>
                     <div class="content">
                         <h3>Experiência</h3>
-                        <p>Os módulos, os conteúdos e os serviços são ministrados pelos nossos profissionais com muita experiência nos seus ramos de actuação.</p>
+                        <p>Os módulos, os conteúdos e os serviços são ministrados pelos nossos profissionais com muita experiência nos seus ramos de atuação.</p>
                     </div>    
                 </div>
             </div>
@@ -334,7 +334,7 @@
                         <h3>quem somos</h3>
                     </div>
                     <div class="about-us">
-                        <p>A Focus Protrading é uma Empresa especializada em treinamento para operadores e investidores no mercado financeiro. Actuamos no mercado de opções binárias e ações.</p>
+                        <p>A Focus Protrading é uma Empresa especializada em treinamento para operadores e investidores no mercado financeiro. Ensinamos a operar opções binárias, Forex e Índices e ações.</p>
                         <ul class="footer-social-links">
                             <li><a href="https://www.instagram.com/focus_protrading/"><i class="fa fa-instagram"></i></a></li>
                         </ul>
