--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                     data-responsive_offset="on"
                     data-start="1500">
                     <div class="slide-content-box middle-slide">
-                        <p> Para ser um trader financeiramente consistente  <br> você precisa procurar o melhor material certo.</p>
+                        <p> Para ser um trader financeiramente consistente  <br> você precisa procurar o material certo.</p>
                     </div>
                 </div>
                 <div class="tp-caption tp-resizeme" 
@@ -313,7 +313,7 @@
                     <h1><span>Quem <b>Somos</b></span></h1>
                 </div>
                 <div class="text">
-                    <p>A Focus Protrading é uma empresa especializada em treinamento para operadores e investidores no mercado financeiro. Atuamos no mercado de opções binárias e ações. Oferecemos os melhores treinamentos e melhores materiais. </p>
+                    <p>A Focus Protrading é uma empresa especializada em treinamento para operadores e investidores no mercado financeiro. Ensinamos a operar opções binárias, Forex, índices e ações. Oferecemos os melhores treinamentos e melhores materiais. </p>
                 </div>
                 <div class="bottom">
                     <a class="readmore thm-btn bgclr-1" href="about.html">Mais detalhes</a>
@@ -469,7 +469,7 @@
                     </div>
                     <div class="content">
                         <h3>Forma organizada de trabalhar</h3>
-                        <p>Somos focados em criar melhores condições de aprendizado, organizando material e conteúdo necessário para o melhor bom aproveitamento dos nossos alunos.</p>
+                        <p>Somos focados em criar melhores condições de aprendizado, organizando material e conteúdo necessário para o melhor aproveitamento dos nossos alunos.</p>
                     </div>    
                 </div>
             </div>
@@ -484,7 +484,7 @@
                     </div>
                     <div class="content">
                         <h3>Experiência</h3>
-                        <p>Os módulos, os conteúdos e os serviços são ministrados pelos nossos profissionais com muita experiência nos seus ramos de actuação.</p>
+                        <p>Os módulos, os conteúdos e os serviços são ministrados pelos nossos profissionais com muita experiência nos seus ramos de atuação.</p>
                     </div>    
                 </div>
             </div>
@@ -651,7 +651,7 @@
                         <h3>quem somos</h3>
                     </div>
                     <div class="about-us">
-                        <p>A Focus Protrading é uma Empresa especializada em treinamento para operadores e investidores no mercado financeiro. Actuamos no mercado de opções binárias e ações.</p>
+                        <p>A Focus Protrading é uma Empresa especializada em treinamento para operadores e investidores no mercado financeiro. Ensinamos a operar opções binárias, Forex e Índices e ações.</p>
                         <ul class="footer-social-links">
                             <li><a href="https://www.instagram.com/focus_protrading/"><i class="fa fa-instagram"></i></a></li>
                         </ul>
