--- a/serv_ob.html
+++ b/serv_ob.html
@@ -489,7 +489,8 @@
             </div>
          </section>
          <!--End slogan area--> 
-       <!--Start footer area-->  
+
+<!--Start footer area-->  
 <footer class="footer-area">
     <div class="container">
         <div class="row">
@@ -500,7 +501,7 @@
                         <h3>quem somos</h3>
                     </div>
                     <div class="about-us">
-                        <p>A Focus Protrading é uma Empresa especializada em treinamento para operadores e investidores no mercado financeiro. Actuamos no mercado de opções binárias e ações.</p>
+                        <p>A Focus Protrading é uma Empresa especializada em treinamento para operadores e investidores no mercado financeiro. Ensinamos a operar opções binárias, Forex e Índices e ações.</p>
                         <ul class="footer-social-links">
                             <li><a href="https://www.instagram.com/focus_protrading/"><i class="fa fa-instagram"></i></a></li>
                         </ul>
@@ -512,7 +513,7 @@
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
                 <div class="single-footer-widget marginlft pd-bottom50">
                     <div class="title">
-                        <h3>Links Úteis</h3>
+                         <h3>Links Úteis</h3>
                     </div>
                     <ul class="usefull-links">
                         <li><a href="serv_ga.html">Sistema de gerenciamento</a></li>
