--- a/contact.html
+++ b/contact.html
@@ -186,8 +186,8 @@
             <div class="col-lg-4 col-md-5">
                 <div class="quick-contact">
                     <div class="title">
-                        <h2>contato rápido</h2>
-                        <p>Se você tiver alguma dúvida, basta usar os seguintes detalhes de contato.</p>
+                        <h2>Contacto rápido</h2>
+                        <p>Se você tiver alguma dúvida, basta usar os seguintes detalhes de contacto.</p>
                     </div>
                     <ul class="contact-info">
                         <!--li>
