--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
   gtag('config', 'UA-185494686-1');
 </script>
 	<meta charset="UTF-8">
-	<title>Contacto</title>
+	<title>FOCUS | Contacto</title>
 
 	<!-- responsive meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
