--- a/contact.html
+++ b/contact.html
@@ -239,7 +239,7 @@
                     <div class="about-us">
                         <p>A Focus Protrading é uma Empresa especializada em treinamento para operadores e investidores no mercado financeiro. Actuamos no mercado de opções binárias e ações.</p>
                         <ul class="footer-social-links">
-                            <li><a href="https://www.instagram.com/focus_protrading/"><i class="fa fa-instagram"></i></a></li>
+                            <li><a target="_blank"  href="https://www.instagram.com/focus_protrading/"><i class="fa fa-instagram"></i></a></li>
                         </ul>
                     </div>
                 </div>
