--- a/serv_ga.html
+++ b/serv_ga.html
@@ -186,7 +186,7 @@
 <!--End Success Story area-->
 
 <!--Start our history mission area-->
-<div class="container">
+<!--div class="container">
             <div class="inner-content">
                <div class="bottom-content" style="text-align: center;">
                   <h1>Planos</h1>
@@ -212,12 +212,9 @@
                            <li>Gerenciamentos</li>
                         </ul>
                      </div>
-                     <!-- /  CONTENT BOX-->
                      <div class="pricingTable-sign-up">
-                        <!-- BUTTON BOX-->
                         <a target="_blank" href="http://growapp.focus.co.mz/user/register" class="btn btn-block btn-default">Adquira já!</a>
                      </div>
-                     <!-- BUTTON BOX-->
                   </div>
                </div>
                <div class="col-md-3 col-sm-6">
@@ -238,12 +235,9 @@
                            <li>Gerenciamentos</li>
                         </ul>
                      </div>
-                     <!-- /  CONTENT BOX-->
                      <div class="pricingTable-sign-up">
-                        <!-- BUTTON BOX-->
                         <a href="#" class="btn btn-block btn-default">Adquira já!</a>
                      </div>
-                     <!-- BUTTON BOX-->
                   </div>
                </div>
                <div class="col-md-3 col-sm-6">
@@ -264,12 +258,9 @@
                            <li>Gerenciamentos</li>
                         </ul>
                      </div>
-                     <!-- /  CONTENT BOX-->
                      <div class="pricingTable-sign-up">
-                        <!-- BUTTON BOX-->
                         <a href="#" class="btn btn-block btn-default">Adquira já!</a>
                      </div>
-                     <!-- BUTTON BOX-->
                   </div>
                </div>
                <div class="col-md-3 col-sm-6">
@@ -290,16 +281,13 @@
                            <li>Gerenciamentos</li>
                         </ul>
                      </div>
-                     <!-- /  CONTENT BOX-->
                      <div class="pricingTable-sign-up">
-                        <!-- BUTTON BOX-->
                         <a href="#" class="btn btn-block btn-default">Adquira já!</a>
                      </div>
-                     <!-- BUTTON BOX-->
                   </div>
                </div>
             </div>
-         </div> 
+         </div--> 
 <!--End our history mission area-->  
  
 
