--- a/serv_ga.html
+++ b/serv_ga.html
@@ -157,7 +157,7 @@
             <div class="col-lg-6 col-md-12">
                 <div class="text-holder">
                     <div class="sec-title">
-                        <h1><span>Sistema de <b>Gerenciamento</b></span></h1>
+                        <h1><span>Sistema de <b>Gestão de Capital</b></span></h1>
                     </div>
                     <div class="text">
                         <p>O gerenciamento de risco faz parte da rotina de quem atua no mercado financeiro, é fundamental se planejar e tentar reduzir ao máximo as possibilidades de perda de capital. O gerenciamento de risco é um conceito-chave que todos os traders iniciantes até mesmo traders com alguma experiência no mercado devem entender e aprender a aplicar. Nesse contexto a Focus Protrandig disponibiliza o GrowApp, que é um sistema integrado de gerenciamento de capital que será aliado de qualquer trader que deseja melhor organização, gestão e análise dos seus resultados</p>
