--- a/serv_ob.html
+++ b/serv_ob.html
@@ -221,9 +221,9 @@
                                     <div class="col-md-6">
                                        <ul class="pricing-content">
                                           <li><i class="fa fa-check-square-o" aria-hidden="true"></i> O que são as opções binárias?</li>
-                                          <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Apresentação das correctoras</li>
-                                          <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Métodos de saque e depósito</li>
-                                          <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Consistência financeira</li>
+                                          <!--li><i class="fa fa-check-square-o" aria-hidden="true"></i> Apresentação das correctoras</li-->
+                                          <!--li><i class="fa fa-check-square-o" aria-hidden="true"></i> Métodos de saque e depósito</li-->
+                                          <!--li><i class="fa fa-check-square-o" aria-hidden="true"></i> Consistência financeira</li-->
                                           <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Os tipos de análise em OB</li>
                                           <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Emocional</li>
                                           <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Os tipos de gerenciamento</li>
@@ -234,7 +234,9 @@
                                           <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Bandas de Bollinger</li>
                                           <li><i class="fa fa-check-square-o" aria-hidden="true"></i> LTA & LTB</li>
                                           <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Suporte & Resistência</li>
-                                          <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Triângulos</li>
+                                          <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Disciplina</li>
+                                          <li><i class="fa fa-check-square-o" aria-hidden="true"></i> As 4 fases para atingir uma boa assertividade</li>
+                                          <!--li><i class="fa fa-check-square-o" aria-hidden="true"></i> Triângulos</li-->
                                        </ul>
                                     </div>
                                     <div class="col-md-6">
@@ -252,7 +254,7 @@
                                           <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Psicologia do Fundo e topo duplo</li>
                                           <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Psicologia da Estrela da noite e da manhã</li>
                                           <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Psicologia da Nuvem Negra e Piecing line</li>
-                                          <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Psicologia do OCO e OCO invertido</li>
+                                          <!--li><i class="fa fa-check-square-o" aria-hidden="true"></i> Psicologia do OCO e OCO invertido</li-->
                                        </ul>
                                     </div>
                                  </div>
@@ -409,7 +411,7 @@
                      </div>
                      <div class="pricingContent">
                         <ul class="pricing-content">
-                           <li>50+ aulas gravadas</li>
+                           <li>30+ aulas gravadas</li>
                            <li>Psicologia de velas</li>
                            <li>Acesso ao GrowApp por 3 meses</li>
                            <li>Mindset para lucros consistentes</li>
@@ -423,7 +425,7 @@
                      <!-- /  CONTENT BOX-->
                      <div class="pricingTable-sign-up">
                         <!-- BUTTON BOX-->
-                        <a href="#" class="btn btn-block btn-default">Brevemente</a>
+                       <a target="_blank" href="https://www.udemy.com/course/focusprotrading" class="btn btn-block btn-default">Adquira já!</a>
                      </div>
                      <!-- BUTTON BOX-->
                   </div>
