--- a/serv_ob.html
+++ b/serv_ob.html
@@ -425,7 +425,7 @@
                      <!-- /  CONTENT BOX-->
                      <div class="pricingTable-sign-up">
                         <!-- BUTTON BOX-->
-                       <a target="_blank" href="https://www.udemy.com/course/focusprotrading" class="btn btn-block btn-default">Adquira já!</a>
+                       <a target="_blank" href="https://www.udemy.com/course/focusprotrading/?referralCode=0EBBD1233233B0657045" class="btn btn-block btn-default">Adquira já!</a>
                      </div>
                      <!-- BUTTON BOX-->
                   </div>
