--- a/serv_ob.html
+++ b/serv_ob.html
@@ -166,7 +166,7 @@
                         <div class="panel-heading" role="tab" id="headingOne">
                            <h4 class="panel-title">
                               <a class="first" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                              Free
+                              Básico
                               <span> </span>
                               </a>
                            </h4>
@@ -371,13 +371,13 @@
                         BO Trading Pro
                         </span>
                         <span class="heading">
-                        Free
+                        Básico
                         </span>
                      </div>
-                     <div class="pricing-plans">
+                     <!--div class="pricing-plans">
                         <span class="price-value"><i class="fa fa-usd"></i><span> 0</span></span>
-                        <!--span class="subtitle">Lorem ipsum dolor</span-->
-                     </div>
+                        <span class="subtitle">Lorem ipsum dolor</span-->
+                     </div-->
                      <div class="pricingContent">
                         <ul class="pricing-content">
                            <li>10+ aulas gravadas</li>
@@ -390,7 +390,7 @@
                      <!-- /  CONTENT BOX-->
                      <div class="pricingTable-sign-up">
                         <!-- BUTTON BOX-->
-                        <a target="_blank" href="https://www.udemy.com/course/day-trading-opcoes-binarias-modulo-i" class="btn btn-block btn-default">Adquira já!</a>
+                        <a target="_blank" href="https://www.udemy.com/course/day-trading-opcoes-binarias-modulo-i/?referralCode=709393F02B034BD3D5D7" class="btn btn-block btn-default">Adquira já!</a>
                      </div>
                      <!-- BUTTON BOX-->
                   </div>
@@ -405,10 +405,10 @@
                         Padrão
                         </span>
                      </div>
-                     <div class="pricing-plans">
+                     <!--div class="pricing-plans">
                         <span class="price-value"><i class="fa fa-usd"></i><span> #</span></span>
-                        <!--span class="subtitle">Lorem ipsum dolor</span-->
-                     </div>
+                        <span class="subtitle">Lorem ipsum dolor</span>
+                     </div-->
                      <div class="pricingContent">
                         <ul class="pricing-content">
                            <li>30+ aulas gravadas</li>
@@ -440,10 +440,10 @@
                         Premiun
                         </span>
                      </div>
-                     <div class="pricing-plans">
+                     <!--div class="pricing-plans">
                         <span class="price-value"><i class="fa fa-usd"></i><span> #</span></span>
-                       <!--span class="subtitle">Lorem ipsum dolor</span-->
-                     </div>
+                       <span class="subtitle">Lorem ipsum dolor</span>
+                     </div-->
                      <div class="pricingContent">
                         <ul class="pricing-content">
                            <li>150+ aulas gravadas</li>
