--- a/serv_ga.html
+++ b/serv_ga.html
@@ -71,6 +71,7 @@
                         <div class="header-social-links">
                            <ul class="social-links">
                               <li><a target="_blank" href="https://www.instagram.com/focus_protrading/"><i class="fa fa-instagram"></i></a></li>
+                               <li><a target="_blank" href="https://www.youtube.com/channel/UCbShZ-lrzxGBEQFJUSgRMvQ"><i class="fa fa-youtube"></i></a></li>
                            </ul>
                         </div>
                      </div>
@@ -325,6 +326,7 @@
                         <p>A Focus Protrading é uma Empresa especializada em treinamento para operadores e investidores no mercado financeiro. Ensinamos a operar opções binárias, Forex e Índices e ações.</p>
                         <ul class="footer-social-links">
                             <li><a target="_blank" href="https://www.instagram.com/focus_protrading/"><i class="fa fa-instagram"></i></a></li>
+                             <li><a target="_blank" href="https://www.youtube.com/channel/UCbShZ-lrzxGBEQFJUSgRMvQ"><i class="fa fa-youtube"></i></a></li>
                         </ul>
                     </div>
                 </div>
