--- a/serv_ob.html
+++ b/serv_ob.html
@@ -64,6 +64,7 @@
                         <div class="header-social-links">
                            <ul class="social-links">
                               <li><a target="_blank" href="https://www.instagram.com/focus_protrading/"><i class="fa fa-instagram"></i></a></li>
+                               <li><a target="_blank" href="https://www.youtube.com/channel/UCbShZ-lrzxGBEQFJUSgRMvQ"><i class="fa fa-youtube"></i></a></li>
                            </ul>
                         </div>
                      </div>
@@ -425,7 +426,7 @@
                      <!-- /  CONTENT BOX-->
                      <div class="pricingTable-sign-up">
                         <!-- BUTTON BOX-->
-                       <a target="_blank" href="https://www.udemy.com/course/focusprotrading/?referralCode=0EBBD1233233B0657045" class="btn btn-block btn-default">Adquira já!</a>
+                        <a href="#" class="btn btn-block btn-default">Brevemente</a>
                      </div>
                      <!-- BUTTON BOX-->
                   </div>
@@ -506,6 +507,7 @@
                         <p>A Focus Protrading é uma Empresa especializada em treinamento para operadores e investidores no mercado financeiro. Ensinamos a operar opções binárias, Forex e Índices e ações.</p>
                         <ul class="footer-social-links">
                             <li><a target="_blank"  href="https://www.instagram.com/focus_protrading/"><i class="fa fa-instagram"></i></a></li>
+                             <li><a target="_blank" href="https://www.youtube.com/channel/UCbShZ-lrzxGBEQFJUSgRMvQ"><i class="fa fa-youtube"></i></a></li>
                         </ul>
                     </div>
                 </div>
