--- a/contact.html
+++ b/contact.html
@@ -80,6 +80,7 @@
                     <div class="header-social-links">
                         <ul class="social-links">
                              <li><a target="_blank" href="https://www.instagram.com/focus_protrading/"><i class="fa fa-instagram"></i></a></li>
+                              <li><a target="_blank" href="https://www.youtube.com/channel/UCbShZ-lrzxGBEQFJUSgRMvQ"><i class="fa fa-youtube"></i></a></li>
                         </ul>  
                     </div>
                 </div>
@@ -217,6 +218,7 @@
                     </ul>
                     <ul class="social-links">
                         <li><a target="_blank" href="https://www.instagram.com/focus_protrading/"><i class="fa fa-instagram"></i></a></li>
+                         <li><a target="_blank" href="https://www.youtube.com/channel/UCbShZ-lrzxGBEQFJUSgRMvQ"><i class="fa fa-youtube"></i></a></li>
                     </ul>
                 </div>    
             </div>
@@ -240,6 +242,8 @@
                         <p>A Focus Protrading é uma Empresa especializada em treinamento para operadores e investidores no mercado financeiro. Actuamos no mercado de opções binárias e ações.</p>
                         <ul class="footer-social-links">
                             <li><a target="_blank"  href="https://www.instagram.com/focus_protrading/"><i class="fa fa-instagram"></i></a></li>
+                       <li><a target="_blank" href="https://www.youtube.com/channel/UCbShZ-lrzxGBEQFJUSgRMvQ"><i class="fa fa-youtube"></i></a></li>
+
                         </ul>
                     </div>
                 </div>
